dump-hook-printer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hook-dumper-web
spec:
  selector:
    app: hook-dumper
  ports:
  - name: http
    protocol: TCP
    port: 8080
